--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,7 +9,7 @@
   display: flex;
   height: 100vh;
   width: 100%;
-  z-index: 9099;
+  z-index: 1;
 }
 
 .canvas {
@@ -36,4 +37,27 @@
   margin-right: auto;
   font-weight: 300;
   z-index: 999;
+}
+.hero-img{
+  background-image: url(/Dp.jpg);
+  height: 20rem;
+  width: 20rem;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: 3px solid #2d2e32;
+  border-radius:60% 40% 30% 70%/60% 30% 70% 40%;
+  animation: morph 8s ease-in-out infinite;
+  transition: all 1s ease-in-out;
+}
+
+@keyframes morph {
+  0% {
+      border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
+  50% {
+      border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+  }
+  100% {
+      border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
 }
